[gd_scene load_steps=39 format=2]

[ext_resource path="res://cueio_personagem.png" type="Texture" id=1]
[ext_resource path="res://fundo01.jpeg" type="Texture" id=2]
[ext_resource path="res://font/Poppins-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sounds/faleceu.wav" type="AudioStream" id=4]
[ext_resource path="res://itens/star.png" type="Texture" id=5]
[ext_resource path="res://personagem.gd" type="Script" id=6]
[ext_resource path="res://object/wall.png" type="Texture" id=7]
[ext_resource path="res://object/paredegrande.png" type="Texture" id=8]
[ext_resource path="res://itens/diamond.png" type="Texture" id=9]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/pega_estrela.wav" type="AudioStream" id=11]
[ext_resource path="res://parede.png" type="Texture" id=12]
[ext_resource path="res://sounds/City of Tears.mp3" type="AudioStream" id=13]
[ext_resource path="res://espinhos.png" type="Texture" id=14]
[ext_resource path="res://Label.gd" type="Script" id=15]
[ext_resource path="res://ah.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/pega_diamante.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=21]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 78.0708, 9.06863 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 640.624, 77.0568 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.75, 58.4689 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 66.5, 23 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 67.5, 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 21.25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 44.5, 22 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 43, 23.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 63.25, 23.375 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 62.875, 22 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 26, 111.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 36.5, 113.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27, 113.25 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 36.5, 113 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 71.5, 22 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 58, 4.5 )

[node name="principal" type="Node2D"]

[node name="sequencia" type="Label" parent="."]
margin_left = 3.0
margin_top = 9.0
margin_right = 141.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.964706, 0.94902, 0.180392, 1 )
custom_fonts/font = SubResource( 13 )
text = "SequÃªncia(s) : 0"

[node name="gameover" type="Label" parent="."]
light_mask = 21
margin_left = 319.0
margin_top = 125.0
margin_right = 685.0
margin_bottom = 314.0
custom_colors/font_color = Color( 0.968627, 0.0392157, 0.298039, 1 )
custom_fonts/font = SubResource( 21 )
align = 1
valign = 1

[node name="count" type="Label" parent="."]
margin_left = 833.0
margin_top = 15.0
margin_right = 944.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.964706, 0.94902, 0.180392, 1 )
custom_fonts/font = SubResource( 16 )
text = "count"
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="count"]
wait_time = 0.1
autostart = true

[node name="tempoacabou" type="Label" parent="."]
margin_left = 308.0
margin_top = 145.0
margin_right = 695.0
margin_bottom = 330.0
custom_colors/font_color = Color( 0.964706, 0.94902, 0.180392, 1 )
custom_fonts/font = SubResource( 22 )
align = 1
valign = 1

[node name="pontos" type="Label" parent="."]
margin_left = 5.0
margin_top = 37.0
margin_right = 86.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.964706, 0.94902, 0.180392, 1 )
custom_fonts/font = SubResource( 13 )
text = "Pontos : 0"

[node name="vidas" type="Label" parent="."]
margin_left = 947.0
margin_top = 15.0
margin_right = 1019.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.964706, 0.94902, 0.180392, 1 )
custom_fonts/font = SubResource( 14 )
text = "Vidas : 3"
align = 2

[node name="teto" type="StaticBody2D" parent="."]

[node name="colisao_teto" type="CollisionShape2D" parent="teto"]
position = Vector2( 512.5, -18.5 )
scale = Vector2( 6.57736, 2.04 )
shape = SubResource( 15 )

[node name="chao" type="StaticBody2D" parent="."]

[node name="chao_colisao" type="CollisionShape2D" parent="chao"]
position = Vector2( 512.5, 534 )
scale = Vector2( 0.801562, 0.830556 )
shape = SubResource( 8 )

[node name="Fundo01" type="Sprite" parent="chao"]
position = Vector2( 513, 298 )
scale = Vector2( 0.801562, 0.830556 )
z_index = -1
texture = ExtResource( 2 )

[node name="personagem" type="KinematicBody2D" parent="."]
position = Vector2( 19, 83 )
z_index = 1
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="personagem"]
position = Vector2( 480.681, 204.681 )
scale = Vector2( 0.00857411, 0.00857411 )
texture = ExtResource( 1 )

[node name="colisao_personagem" type="CollisionPolygon2D" parent="personagem"]
polygon = PoolVector2Array( 471, 203, 475, 203, 476, 205, 473, 205, 473, 213, 471, 213, 471, 223, 473, 223, 473, 225, 495, 225, 497, 225, 497, 222, 500, 222, 500, 212, 497, 213, 497, 206, 495, 206, 495, 204, 497, 204, 497, 194, 499, 194, 499, 182, 497, 182, 497, 179, 490, 179, 490, 182, 488, 182, 488, 203, 483, 203, 483, 182, 480, 182, 480, 179, 470, 179, 470, 181, 468, 181, 468, 194, 470, 194 )

[node name="area_dano_personagem" type="Area2D" parent="personagem"]
collision_layer = 5
collision_mask = 5

[node name="colisao_personagem_dano" type="CollisionPolygon2D" parent="personagem/area_dano_personagem"]
position = Vector2( -47.4699, -6.31517 )
scale = Vector2( 1.10119, 1.02865 )
polygon = PoolVector2Array( 470, 179, 480, 179, 480, 182, 483, 182, 483, 203, 488, 203, 488, 182, 490, 182, 490, 179, 497, 179, 497, 182, 499, 182, 499, 194, 497, 194, 497, 204, 495, 204, 495, 206, 497, 206, 497, 213, 498.07, 213.207, 498.07, 222.928, 497.162, 222.928, 494.438, 222.928, 494.438, 224.873, 494.438, 224.873, 472.643, 224.873, 472.643, 222.928, 470.827, 222.928, 471, 213, 473, 213, 473, 205, 476, 205, 475, 203, 471, 203, 470, 194, 468, 194, 468, 181, 470, 181 )

[node name="area_personagem" type="Area2D" parent="personagem"]
collision_layer = 4
collision_mask = 4

[node name="colisao_area_personagem" type="CollisionPolygon2D" parent="personagem/area_personagem"]
light_mask = 4
position = Vector2( -22.5352, 0 )
scale = Vector2( 1.0506, 1 )
polygon = PoolVector2Array( 470, 179, 480, 179, 480, 182, 483, 182, 483, 203, 488, 203, 488, 182, 490, 182, 490, 179, 497, 179, 497, 182, 499, 182, 499, 194, 497, 194, 497, 204, 495, 204, 495, 206, 497, 206, 497, 213, 499.272, 213, 499.272, 223, 497, 223, 497, 225, 495, 225, 494.513, 225, 475.476, 225, 473.572, 225, 471.669, 225, 471.669, 224, 471.669, 223, 471, 222, 471, 213, 473, 213, 473, 205, 476, 205, 475, 203, 471, 203, 470, 194, 468, 194, 468, 181, 470, 181 )

[node name="jump" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 10 )
area_mask = 34833

[node name="pega_diamante" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 17 )
volume_db = 6.19
area_mask = 34833

[node name="pega_estrela" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 11 )
area_mask = 34833

[node name="musica" type="AudioStreamPlayer" parent="personagem"]
stream = ExtResource( 13 )
volume_db = -10.0
autoplay = true

[node name="faleceu" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 4 )
volume_db = 15.398
area_mask = 34833

[node name="dano" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 16 )
volume_db = 8.558
area_mask = 34833

[node name="parede_baixo" type="StaticBody2D" parent="."]

[node name="parede_baixo" type="Sprite" parent="parede_baixo"]
position = Vector2( 503, 400.003 )
scale = Vector2( 0.46281, 0.68622 )
texture = ExtResource( 7 )

[node name="colisao_parede_baixo" type="CollisionShape2D" parent="parede_baixo"]
position = Vector2( 503, 422.313 )
shape = SubResource( 2 )

[node name="espinhos_baixo_parede1" type="Sprite" parent="parede_baixo"]
position = Vector2( 431, 418.563 )
scale = Vector2( 0.0644532, 0.361084 )
texture = ExtResource( 14 )

[node name="colisao_baixo_espinhos" type="CollisionPolygon2D" parent="parede_baixo"]
light_mask = 4
polygon = PoolVector2Array( 446, 366, 428, 367, 423, 379, 428, 388, 443, 388, 443, 408, 420, 407, 414, 418, 420, 429, 444, 429, 445, 450, 429, 449, 424, 458, 428, 467, 443, 468, 445, 477 )

[node name="espinhos_baixo_parede2" type="Sprite" parent="parede_baixo"]
position = Vector2( 572, 421 )
rotation = -3.13262
scale = Vector2( 0.0644532, 0.361084 )
texture = ExtResource( 14 )

[node name="colisao_baixo_espinhos2" type="CollisionPolygon2D" parent="parede_baixo"]
polygon = PoolVector2Array( 557, 361, 557, 370, 575, 370, 580, 380, 576, 392, 559, 392, 559, 409, 583, 410, 587, 420, 583, 431, 558, 432, 559, 450, 575, 451, 580, 460, 575, 473, 558, 473, 558, 480 )

[node name="parede_cima" type="StaticBody2D" parent="."]

[node name="parede_cima" type="Sprite" parent="parede_cima"]
position = Vector2( 502, 81 )
scale = Vector2( 0.46281, 0.669456 )
texture = ExtResource( 7 )

[node name="colisao_parede_cima" type="CollisionShape2D" parent="parede_cima"]
position = Vector2( 502.25, 75.5311 )
shape = SubResource( 2 )

[node name="espinhos_cima_parede1" type="Sprite" parent="parede_cima"]
position = Vector2( 432, 36 )
scale = Vector2( 0.0644532, 0.233261 )
texture = ExtResource( 14 )

[node name="colisao_cima_espinhos1" type="CollisionPolygon2D" parent="parede_cima"]
polygon = PoolVector2Array( 446, 4, 428, 4, 424, 10, 429, 16, 446, 16, 445, 30, 421, 29, 417, 35, 420, 42, 445, 43, 445, 55, 429, 55, 424, 62, 428, 68, 447, 69 )

[node name="espinhos_cima_parede2" type="Sprite" parent="parede_cima"]
position = Vector2( 430, 137.821 )
scale = Vector2( 0.0644532, 0.137417 )
texture = ExtResource( 14 )

[node name="colisao_cima_espinhos2" type="CollisionPolygon2D" parent="parede_cima"]
polygon = PoolVector2Array( 443, 115, 443, 118, 427, 118, 421, 122, 427, 127, 443, 127, 443, 133, 419, 133, 413, 138, 419, 142, 442, 142, 442, 149, 426, 149, 421, 153, 426, 157, 443, 157, 447, 161, 446, 115 )

[node name="espinhos_cima_parede3" type="Sprite" parent="parede_cima"]
position = Vector2( 575, 37 )
rotation = 3.13642
scale = Vector2( 0.0644532, 0.233261 )
texture = ExtResource( 14 )

[node name="colisao_cima_espinhos3" type="CollisionPolygon2D" parent="parede_cima"]
polygon = PoolVector2Array( 562, 1, 562, 4, 578, 4, 583, 11, 578, 18, 562, 18, 562, 30, 586, 30, 591, 37, 586, 44, 562, 44, 562, 56, 578, 56, 584, 63, 578, 70, 562, 70, 562, 72, 559, 72, 559, 1 )

[node name="espinhos_cima_parede4" type="Sprite" parent="parede_cima"]
position = Vector2( 573, 139 )
rotation = -3.13716
scale = Vector2( 0.0644532, 0.13253 )
texture = ExtResource( 14 )

[node name="colisao_cima_espinhos4" type="CollisionPolygon2D" parent="parede_cima"]
polygon = PoolVector2Array( 560, 120, 576, 120, 581, 124, 577, 128, 560, 128, 560, 134, 584, 135, 589, 139, 584, 143, 560, 143, 560, 150, 576, 150, 581, 154, 576, 158, 560, 158, 558, 157, 557, 160, 557, 119 )

[node name="piso_01" type="StaticBody2D" parent="."]

[node name="piso_01" type="Sprite" parent="piso_01"]
position = Vector2( 826.979, 228.75 )
scale = Vector2( 0.022696, 0.026 )
texture = ExtResource( 8 )

[node name="colisao_piso_01" type="CollisionShape2D" parent="piso_01"]
position = Vector2( 826.5, 230 )
shape = SubResource( 3 )

[node name="piso_02" type="StaticBody2D" parent="."]

[node name="piso_02" type="Sprite" parent="piso_02"]
position = Vector2( 184.5, 231.5 )
scale = Vector2( 0.0228581, 0.0245714 )
texture = ExtResource( 8 )

[node name="colisao_piso_02" type="CollisionShape2D" parent="piso_02"]
position = Vector2( 184.5, 231 )
shape = SubResource( 4 )

[node name="piso_03" type="StaticBody2D" parent="."]

[node name="piso_03" type="Sprite" parent="piso_03"]
position = Vector2( 383.5, 93.0626 )
scale = Vector2( 0.0215036, 0.0250713 )
texture = ExtResource( 8 )

[node name="colisao_piso_03" type="CollisionShape2D" parent="piso_03"]
position = Vector2( 384, 93.25 )
shape = SubResource( 5 )

[node name="piso_05" type="StaticBody2D" parent="."]

[node name="piso_05" type="Sprite" parent="piso_05"]
position = Vector2( 45.2263, 376 )
scale = Vector2( 0.0153154, 0.026375 )
texture = ExtResource( 8 )

[node name="colisao_piso_05" type="CollisionShape2D" parent="piso_05"]
position = Vector2( 45.5, 376 )
shape = SubResource( 9 )

[node name="piso_06" type="StaticBody2D" parent="."]

[node name="piso_06" type="Sprite" parent="piso_06"]
position = Vector2( 981.835, 368 )
scale = Vector2( 0.0146174, 0.0269107 )
texture = ExtResource( 8 )

[node name="colisao_piso_06" type="CollisionShape2D" parent="piso_06"]
position = Vector2( 982, 368.5 )
shape = SubResource( 10 )

[node name="piso_04" type="StaticBody2D" parent="piso_06"]

[node name="piso_04" type="Sprite" parent="piso_06/piso_04"]
position = Vector2( 621.5, 95.2343 )
scale = Vector2( 0.0215036, 0.0265535 )
texture = ExtResource( 8 )

[node name="colisao_piso_04" type="CollisionShape2D" parent="piso_06/piso_04"]
position = Vector2( 622.25, 94.625 )
shape = SubResource( 6 )

[node name="piso_07" type="StaticBody2D" parent="."]

[node name="piso_07" type="Sprite" parent="piso_07"]
position = Vector2( 621, 340 )
scale = Vector2( 0.0211649, 0.0254999 )
texture = ExtResource( 8 )

[node name="colisao_piso_07" type="CollisionShape2D" parent="piso_07"]
position = Vector2( 622, 341 )
shape = SubResource( 11 )

[node name="piso_08" type="StaticBody2D" parent="."]

[node name="piso_08" type="Sprite" parent="piso_08"]
position = Vector2( 384, 340 )
scale = Vector2( 0.0213407, 0.0258214 )
texture = ExtResource( 8 )

[node name="colisao_piso_08" type="CollisionShape2D" parent="piso_08"]
position = Vector2( 384, 341 )
shape = SubResource( 11 )

[node name="parede_dano_01" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="parede_dano_01" type="Sprite" parent="parede_dano_01"]
position = Vector2( 181.5, 364.5 )
scale = Vector2( 0.0225, 0.0380968 )
texture = ExtResource( 12 )

[node name="colisao_parede_dano_01" type="CollisionShape2D" parent="parede_dano_01"]
position = Vector2( 182, 364.5 )
shape = SubResource( 12 )

[node name="area_1colision" type="CollisionShape2D" parent="parede_dano_01"]
position = Vector2( 182.5, 365.5 )
shape = SubResource( 17 )

[node name="parede_dano_02" type="StaticBody2D" parent="."]

[node name="parede_dano_02" type="Sprite" parent="parede_dano_02"]
position = Vector2( 826.001, 365.47 )
rotation = -3.13873
scale = Vector2( 0.0225, 0.0382762 )
texture = ExtResource( 12 )

[node name="colisao_parede_dano_01" type="CollisionShape2D" parent="parede_dano_02"]
position = Vector2( 824, 364.75 )
shape = SubResource( 7 )

[node name="area_2colision" type="CollisionShape2D" parent="parede_dano_02"]
position = Vector2( 824.5, 366 )
shape = SubResource( 18 )

[node name="item_01" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_01" type="Sprite" parent="item_01"]
position = Vector2( 185, 167 )
scale = Vector2( 0.00985575, 0.00991561 )
texture = ExtResource( 5 )

[node name="colisao_item_01" type="CollisionPolygon2D" parent="item_01"]
position = Vector2( 185, 167 )
scale = Vector2( 0.00985575, 0.00991561 )
polygon = PoolVector2Array( -101.465, -2521.28, -710.246, -1311.06, -1826.35, -806.807, -2536.59, -605.104, -2536.59, -201.699, -2232.2, 201.705, -1927.81, 605.109, -1623.42, 1008.51, -1623.42, 1311.07, -1724.88, 1815.32, -1927.81, 2017.02, -1927.81, 2521.28, -1319.03, 2521.28, -405.855, 2017.02, -304.393, 1916.17, 304.391, 1916.17, 710.244, 2117.88, 1420.49, 2521.28, 1927.81, 2521.28, 1927.81, 1916.17, 1623.42, 1916.17, 1623.42, 907.662, 1927.81, 907.662, 1927.81, 403.406, 2130.73, 403.406, 2130.73, 201.705, 2333.66, 201.705, 2333.66, 0.00195313, 2536.59, 0.00195313, 2536.59, -504.253, 1420.49, -806.807, 811.707, -1109.36, 202.926, -2420.42 )

[node name="item_02" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_02" type="Sprite" parent="item_02"]
position = Vector2( 820, 167 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_02" type="CollisionPolygon2D" parent="item_02"]
polygon = PoolVector2Array( 820, 142, 834, 158, 846, 163, 843, 168, 836, 176, 838, 191, 824, 186, 818, 186, 802, 192, 805, 176, 795, 161, 813, 156 )

[node name="item_03" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_03" type="Sprite" parent="item_03"]
position = Vector2( 985, 311 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_03" type="CollisionPolygon2D" parent="item_03"]
polygon = PoolVector2Array( 985, 285, 1000, 302, 1012, 307, 1004, 319, 1002, 325, 1004, 336, 988, 331, 982, 331, 966, 336, 967, 319, 959, 306, 974, 301 )

[node name="item_04" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_04" type="Sprite" parent="item_04"]
position = Vector2( 41, 316 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_04" type="CollisionPolygon2D" parent="item_04"]
polygon = PoolVector2Array( 41, 291, 53, 306, 66, 311, 60, 323, 58, 330, 60, 341, 46, 336, 38, 336, 22, 341, 25, 325, 15, 312, 31, 305 )

[node name="item_05" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_05" type="Sprite" parent="item_05"]
position = Vector2( 41, 441 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_05" type="CollisionPolygon2D" parent="item_05"]
polygon = PoolVector2Array( 41, 416, 51, 428, 68, 436, 60, 449, 58, 455, 60, 466, 46, 462, 38, 462, 22, 466, 23, 449, 15, 436, 32, 429 )

[node name="item_06" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_06" type="Sprite" parent="item_06"]
position = Vector2( 988, 439 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_06" type="CollisionPolygon2D" parent="item_06"]
polygon = PoolVector2Array( 988, 414, 997, 427, 1015, 434, 1009, 443, 1004, 452, 1007, 464, 993, 460, 984, 460, 970, 464, 972, 448, 961, 434, 980, 427 )

[node name="item_07" type="StaticBody2D" parent="."]
position = Vector2( -567, -246 )
scale = Vector2( 1.08, 1 )
collision_layer = 4
collision_mask = 4

[node name="item_07" type="Sprite" parent="item_07"]
position = Vector2( 988, 439 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="colisao_item_07" type="CollisionPolygon2D" parent="item_07"]
polygon = PoolVector2Array( 988, 414, 997, 427, 1015, 434, 1009, 443, 1004, 452, 1007, 464, 993, 460, 984, 460, 970, 464, 972, 448, 961, 434, 980, 427 )

[node name="item_especial_01" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_especial_01" type="Sprite" parent="item_especial_01"]
position = Vector2( 620, 47 )
scale = Vector2( 0.14, 0.122 )
texture = ExtResource( 9 )

[node name="colisao_especial_01" type="CollisionPolygon2D" parent="item_especial_01"]
polygon = PoolVector2Array( 611, 34, 628, 34, 643, 44, 620, 66, 597, 44 )

[node name="item_especial_02" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_especial_02" type="Sprite" parent="item_especial_02"]
position = Vector2( 385.737, 48.2 )
scale = Vector2( 0.14, 0.122 )
texture = ExtResource( 9 )

[node name="colisao_especial_02" type="CollisionPolygon2D" parent="item_especial_02"]
polygon = PoolVector2Array( 377, 35, 395, 35, 409, 46, 386, 67, 363, 46 )

[node name="item_especial_03" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_especial_03" type="Sprite" parent="item_especial_03"]
position = Vector2( 383, 419.5 )
scale = Vector2( 0.14, 0.1225 )
texture = ExtResource( 9 )

[node name="colisao_especial_03" type="CollisionPolygon2D" parent="item_especial_03"]
polygon = PoolVector2Array( 373, 406, 392, 406, 407, 417, 383, 439, 359, 417 )

[node name="item_especial_04" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="item_especial_04" type="Sprite" parent="item_especial_04"]
position = Vector2( 623, 420 )
scale = Vector2( 0.14, 0.122 )
texture = ExtResource( 9 )

[node name="colisao_especial_04" type="CollisionPolygon2D" parent="item_especial_04"]
polygon = PoolVector2Array( 612, 407, 633, 407, 647, 418, 623, 439, 600, 418 )

[node name="parede_1segura" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="parede_1segura"]
position = Vector2( 501, 340 )
scale = Vector2( 0.024128, 0.0255715 )
texture = ExtResource( 8 )

[node name="colisao_1segura" type="CollisionShape2D" parent="parede_1segura"]
position = Vector2( 500.5, 341 )
shape = SubResource( 19 )

[node name="colisao_segura2" type="StaticBody2D" parent="."]

[node name="colisao_2segura" type="CollisionShape2D" parent="colisao_segura2"]
position = Vector2( 501, 160.5 )
shape = SubResource( 20 )

[connection signal="timeout" from="count/Timer" to="count" method="_on_Timer_timeout"]
[connection signal="body_entered" from="personagem/area_dano_personagem" to="personagem" method="_on_area_dano_personagem_body_entered"]
[connection signal="body_entered" from="personagem/area_personagem" to="personagem" method="_on_area_personagem_body_entered"]
